--- a/index.html
+++ b/index.html
@@ -112,12 +112,13 @@
           <label for="email">Correu electrònic</label>
           <input type="email" id="email" name="email" placeholder="Introdueix correu electrònic" required>
           </select><br><br>  
+    
           <label for="missatge">Descripció</label>
           <textarea id="missatge" placeholder="Escriu una descripció" maxlength="300" required></textarea>
   
           <input type="checkbox" name="decla" id="decla" value="decla" checked>
           <label for="decla">Declaro i accepto haber llegit les polìtiques de la pàgina</label><br><br>
-      
+      <p>fabhggtfhabiah</p>
           <input type="submit" value="Envia">
       </form>
        </div>
